# sber_test_job_python

./: .gitignore  LICENSE  README.md  convert_markup.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: styles.yml  styles_and_tests.yml
