[tool.poetry]
name = "sber_test_job"
version = "0.1.0"
description = "Test job in Sber"
authors = ["Michail Eisenberg <75097575+nightriddler@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
black = "^22.1.0"
mypy = "^0.931"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
